--- a/scripts/batch-train/default.config.yml
+++ b/scripts/batch-train/default.config.yml
@@ -26,7 +26,7 @@ features:
   - name: gpsspeed
     units: mph
   - name: grade
-    units: percent_0_100
+    units: percent_0.0->1.0
 
 # which estimators should be used: [explicit_bin, random_forest, linear_regression, xgboost]
 estimators:
