changed output_filepath parameter to be a string rather than path to make it easier for the user to use. Updated broken tests to work with new output directory structure. Updated default script config with new defaults and int_features parameter

--- a/scripts/visualization/default.visual.config.yml
+++ b/scripts/visualization/default.visual.config.yml
@@ -7,14 +7,23 @@ output_path: 'where/to/save/outputs'
 # number of links generated for the test
 num_links: 15
 
+# features to be iterated using integers instead of floats
+int_features:
+  - road_priority
+
 # these ranges will be used when generating predictions using the routee-powertrain models
 feature_ranges:
-  gpsspeed:
+  speed:
     max: 80
     min: 0
     default: 40
-    
+
   grade:
-    max: 0.20
-    min: -0.20
+    max: 6
+    min: -6
+    default: 0
+
+  road_priority:
+    max: 8
+    min: 0
     default: 0
