--- a/scripts/visualization/default.visual.config.yml
+++ b/scripts/visualization/default.visual.config.yml
@@ -14,16 +14,31 @@ int_features:
 # these ranges will be used when generating predictions using the routee-powertrain models
 feature_ranges:
   speed:
-    max: 80
+    max: 160
     min: 0
-    default: 40
+    default: 65
 
   grade:
-    max: 6
-    min: -6
+    max: 15
+    min: -15
     default: 0
 
   road_priority:
     max: 8
     min: 0
     default: 0
+
+  entry_angle:
+    max: 180
+    min: -180
+    default: 0
+
+  exit_angle:
+    max: 180
+    min: -180
+    default: 0
+
+  ratio_ffs:
+    max: 2
+    min: 0
+    default: 1
