--- a/scripts/visualization/default.visual.config.yml
+++ b/scripts/visualization/default.visual.config.yml
@@ -4,41 +4,30 @@ models_path: 'where/to/find/models'
 # where to save the resulting plots
 output_path: 'where/to/save/outputs'
 
-# number of links generated for the test
-num_links: 15
-
-# features to be iterated using integers instead of floats
-int_features:
-  - road_priority
-
 # these ranges will be used when generating predictions using the routee-powertrain models
 feature_ranges:
   speed:
     max: 160
     min: 0
-    default: 65
+    steps: 80
 
   grade:
-    max: 15
-    min: -15
-    default: 0
+    max: 20
+    min: -20
+    steps: 40
 
   road_priority:
-    max: 8
+    max: 7
     min: 0
-    default: 0
+    steps: 8
 
   entry_angle:
     max: 180
     min: -180
-    default: 0
+    steps: 36
 
   exit_angle:
     max: 180
     min: -180
-    default: 0
+    steps: 36
 
-  ratio_ffs:
-    max: 2
-    min: 0
-    default: 1
