add function to write models to c code

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 recursive-include powertrain/resources/default_models *
 recursive-include powertrain/resources/sample_routes *
+recursive-include powertrain/resources/templates *
