--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "nrel.routee.powertrain"
-version = "1.0"
+version = "1.0.0"
 description = "RouteE-Powertrain is a tool for predicting energy usage over a set of road links."
 readme = "README.md"
 authors = [{ name = "National Renewable Energy Laboratory" }]
@@ -20,12 +20,9 @@ classifiers = [
 dependencies = ["pandas", "numpy", "onnx", "onnxruntime"]
 requires-python = ">=3.8"
 
-dev = [
-    "pytest",
-    "black",
-    "mypy",
-    "ruff",
-]
+[project.optional-dependencies]
+trainers = ["scikit-learn"]
+dev = ["pytest", "black", "mypy", "ruff"]
 
 [project.urls]
 Homepage = "https://github.nrel.gov/MBAP/routee-powertrain"
