fix tests, udpate docs, update default models

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -13,6 +13,7 @@ parts:
     chapters:
     - file: model_prediction 
     - file: model_training 
+    - file: api_docs
 
   - caption: Developers 
     chapters:
