--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,12 +17,31 @@ latex:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
+  url: https://github.com/NREL/routee-powertrain  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   use_issues_button: true
   use_repository_button: true
+
+
+sphinx:
+  extra_extensions:
+    - "sphinx.ext.autodoc"
+    - "sphinx.ext.napoleon"
+    - "sphinx.ext.viewcode"
+  config:
+    html_theme: sphinx_book_theme
+    language: "python"
+  html_context:
+    default_mode: light
+
+  # Autodoc config reference
+  # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
+  autodoc_default_options:
+    members: true
+    member-order: bysource
+    private-members: true
