--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Install package
         run: |
+          pip install pip --upgrade
           pip install ".[dev]"
 
       - name: Run mypy
