--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ plot = ["matplotlib"]
 dev = [
     "nrel.routee.powertrain[scikit]",
     "nrel.routee.powertrain[plot]",
+    "tqdm",
     "pytest",
     "black",
     "mypy",
