--- a/rust/pyproject.toml
+++ b/rust/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "powertrain_rust"
+version = "1.1.1"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
