--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,11 +38,15 @@ jobs:
           pip install ".[dev]"
 
       - name: Run mypy
-        run: mypy . 
+        run: mypy .
 
-      - name: Run black
+      - name: Lint with ruff
         run: |
-          black nrel tests --check
+          ruff check
+
+      - name: ruff format check
+        run: |
+          ruff format --check
 
       - name: Python unit tests
         run: |
