--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
@@ -50,4 +50,5 @@ jobs:
 
       - name: Python unit tests
         run: |
-          pytest tests/ -v
+          python -m unittest discover tests/
+          
