--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ classifiers = [
 dependencies = [
     "pandas>=2.2,<3.0",
     "numpy>=1.26,<2.0",
-    "onnx==1.17.0",
-    "onnxruntime==1.18.1",
+    "onnx>=1.17,<2.0",
+    "onnxruntime>=1.18.1,<2.0",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.14"
 
 [project.optional-dependencies]
 scikit = ["scikit-learn==1.6.1", "skl2onnx==1.18.0"]
