--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,10 @@ dependencies = [
     "onnx>=1.17,<2.0",
     "onnxruntime>=1.18.1,<2.0",
 ]
-requires-python = ">=3.9,<3.14"
+requires-python = ">=3.9,<3.13"
 
 [project.optional-dependencies]
-scikit = ["scikit-learn==1.6.1", "skl2onnx==1.18.0"]
+scikit = ["scikit-learn==1.6.1", "skl2onnx>=1.19.1,<1.20"]
 ngboost = ["ngboost==0.5.2", "scikit-learn==1.6.1"]
 plot = ["matplotlib"]
 dev = [
