--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12"]
 
     env:
       PYTHON: ${{ matrix.python-version }}
@@ -51,4 +51,3 @@ jobs:
       - name: Python unit tests
         run: |
           python -m unittest discover tests/
-          
